Fixed output and console scolling

--- a/ws_ide.css
+++ b/ws_ide.css
@@ -87,6 +87,12 @@ textarea.inputBox {
   white-space: pre;
   word-break: none;
 }
+
+.consoleText {
+  white-space: pre;
+  word-brake: none;
+}
+
 .tabContent {
   display: none;
 }
