--- a/ws_ide.css
+++ b/ws_ide.css
@@ -56,6 +56,7 @@ textarea.inputBox {
 
 .btn {
   display: inline-block;
+  font-size: 12px;
 }
 .btn a {
   cursor: default;
@@ -197,6 +198,7 @@ div.panel div.label span {
 
 .buttonBar {
   height:14px;
+  font-size: 0;
 }
 
 #heapSpan {
