--- a/ws_ide.css
+++ b/ws_ide.css
@@ -249,8 +249,26 @@ div.panel div.label span {
   margin-left:auto;
   margin-right:auto;
 
-  width: 100px;
-  height: 100px;
+  min-width: 100px;
+  min-height: 100px;
   border: 4px double;
+  display: inline-block;
+  position: absolute;
   
+}
+
+#splashScreen {
+  width:300px; 
+  height:200px; 
+  display:inline-block; 
+  background-color: white;
+  background: url(img/lips.png) white no-repeat;
+  background-position-y: 20px;
+}
+
+#splashScreen .nameVersion {
+  display: inline-block;
+  margin-left:140px;
+  margin-top: 90px;
+  white-space: pre;
 }
