--- a/ws_ide.css
+++ b/ws_ide.css
@@ -108,7 +108,6 @@ textarea.inputBox {
   display: none;
 }
 .tabLabels {
-  margin-top: 16px;
   position: relative;
 }
 .allTabs {
@@ -286,4 +285,11 @@ div.panel div.label span {
 
 .asmLine.asmInstr {
   padding-left: 12px;
+}
+
+#errorDiv {
+  margin-top: 3px;
+  margin-bottom: 3px;
+  color: red;
+  height: 1em;
 }
