Fixed empty input source textarea size.

--- a/ws_ide.css
+++ b/ws_ide.css
@@ -19,6 +19,7 @@ body, input, textarea {
   background: transparent;
   outline: none;
   border: none;
+  min-height: 250px;
 }
 
 textarea.inputBox {
