--- a/css/ws_ide.css
+++ b/css/ws_ide.css
@@ -280,8 +280,19 @@ div.panel div.label span {
 }
 
 #errorDiv {
+  display: inline-block;
+  width: 530px;
   margin-top: 3px;
   margin-bottom: 3px;
   color: red;
+  height: 1em;
+}
+
+#animDiv {
+  display: inline-block;
+  white-space: pre;
+  margin-top: 3px;
+  margin-bottom: 3px;
+  width: 50px;
   height: 1em;
 }
