--- a/css/ws_ide.css
+++ b/css/ws_ide.css
@@ -281,9 +281,18 @@ div.panel div.label span {
 }
 
 #helpModal {
-  width: 600px;
-  height: 400px;
   background-color: white;
+}
+
+#helpModal #helpModalContent {
+  width: 700px;
+  height: 500px;
+}
+
+#helpModal #helpModalContent iframe {
+  width: 100%;
+  height: 100%;
+  border: 0;
 }
 
 #modal .modalContent {
